--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,19 @@
 Github
 
+https://github.com/maxis42/Big-Data-Engineering-Coursera-Yandex : done 
 
 
 Video 
+- Netflix data engineer 
+- Yelp data engineer 
+- Facebook data engineer 
+- AirBnB data engineer 
+- Yandex data engineer 
+- Alibaba data engineer 
+- twitter, microsoft, ibm 
 
+- Data engineer course 
+- 
 
 
 Online course 
