add test hadoop sh

--- a/hadoop/cheatsheet.ipynb
+++ b/hadoop/cheatsheet.ipynb
@@ -59,6 +59,279 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "!hdfs dfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hdfs dfs -ls /"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hdfs --config ~/hadoop_palmetto/config dfs -ls /"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hdfs --config ~/hadoop_palmetto/config dfs -mkdir -p /user/$USER/intro-to-hadoop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hdfs --config ~/hadoop_palmetto/config dfs -put\n",
+    "!hdfs --config ~/hadoop_palmetto/config dfs -put text intro-to-hadoop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hdfs --config ~/hadoop_palmetto/config fsck intro-to-hadoop/text/complete-shakespeare.txt -files -blocks -locations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "!mkdir codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hdfs --config ~/hadoop_palmetto/config dfs -cat intro-to-hadoop/text/complete-shakespeare.txt \\\n",
+    "    2>/dev/null | head -n 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile codes/wordcountMapper.py\n",
+    "#!/software/spackages/linux-centos8-x86_64/gcc-8.3.1/anaconda3-2019.10-v5cuhr6keyz5ryxcwvv2jkzfj2gwrj4a/bin/python                                          \n",
+    "import sys                                                                                                \n",
+    "for oneLine in sys.stdin:\n",
+    "    oneLine = oneLine.strip()\n",
+    "    for word in oneLine.split(\" \"):\n",
+    "        if word != \"\":\n",
+    "            print ('%s\\t%s' % (word, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hdfs --config ~/hadoop_palmetto/config dfs -cat intro-to-hadoop/text/complete-shakespeare.txt \\\n",
+    "    2>/dev/null \\\n",
+    "    | head -n 20 \\\n",
+    "    | python ./codes/wordcountMapper.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hdfs --config ~/hadoop_palmetto/config dfs -cat intro-to-hadoop/text/complete-shakespeare.txt \\\n",
+    "    2>/dev/null \\\n",
+    "    | head -n 20 \\\n",
+    "    | python ./codes/wordcountMapper.py \\\n",
+    "    | sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/software/spackages/linux-centos8-x86_64/gcc-8.3.1/anaconda3-2019.10-v5cuhr6keyz5ryxcwvv2jkzfj2gwrj4a/bin/python\n",
+    "import sys\n",
+    "\n",
+    "current_word = None\n",
+    "total_word_count = 0\n",
+    "\n",
+    "for line in sys.stdin:\n",
+    "    line = line.strip()\n",
+    "    word, count = line.split(\"\\t\", 1)\n",
+    "    try:\n",
+    "        count = int(count)\n",
+    "    except ValueError:\n",
+    "        continue\n",
+    "    \n",
+    "    if current_word == word:\n",
+    "        total_word_count += count\n",
+    "    else:\n",
+    "        if current_word:\n",
+    "            print (\"%s\\t%s\" % (current_word, total_word_count))\n",
+    "        current_word = word\n",
+    "        total_word_count = 1\n",
+    "        \n",
+    "if current_word == word:\n",
+    "    print (\"%s\\t%s\" % (current_word, total_word_count))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hdfs --config ~/hadoop_palmetto/config dfs -cat intro-to-hadoop/text/complete-shakespeare.txt \\\n",
+    "    2>/dev/null \\\n",
+    "    | head -n 20 \\\n",
+    "    | python ./codes/wordcountMapper.py \\\n",
+    "    | sort \\\n",
+    "    | python ./codes/wordcountReducer.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hdfs --config ~/hadoop_palmetto/config dfs -rm -R intro-to-hadoop/output-wordcount\n",
+    "!mapred --config ~/hadoop_palmetto/config streaming \\\n",
+    "    -input intro-to-hadoop/text/complete-shakespeare.txt \\\n",
+    "    -output intro-to-hadoop/output-wordcount \\\n",
+    "    -file ./codes/wordcountMapper.py \\\n",
+    "    -mapper wordcountMapper.py \\\n",
+    "    -file ./codes/wordcountReducer.py \\\n",
+    "    -reducer wordcountReducer.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hdfs --config ~/hadoop_palmetto/config dfs -ls intro-to-hadoop/output-wordcount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hdfs --config ~/hadoop_palmetto/config dfs -cat intro-to-hadoop/output-wordcount/part-00000 \\\n",
+    "    2>/dev/null | head -n 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile codes/wordcountEnhancedMapper.py\n",
+    "#!/software/spackages/linux-centos8-x86_64/gcc-8.3.1/anaconda3-2019.10-v5cuhr6keyz5ryxcwvv2jkzfj2gwrj4a/bin/python                                          \n",
+    "import sys                     \n",
+    "import string\n",
+    "\n",
+    "translator = str.maketrans('', '', string.punctuation)\n",
+    "\n",
+    "for oneLine in sys.stdin:\n",
+    "    oneLine = oneLine.strip()\n",
+    "    for word in oneLine.split(\" \"):\n",
+    "        if word != \"\":\n",
+    "            newWord = word.translate(translator).lower()\n",
+    "            print ('%s\\t%s' % (_______, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hdfs dfs -rm -R intro-to-hadoop/output-wordcount-enhanced\n",
+    "!ssh dsciutil yarn jar /usr/hdp/current/hadoop-mapreduce-client/hadoop-streaming.jar \\\n",
+    "    -input intro-to-hadoop/text/gutenberg-shakespeare.txt \\\n",
+    "    -output intro-to-hadoop/output-wordcount \\\n",
+    "    -file ____________________________________________________ \\\n",
+    "    -mapper _____________________ \\\n",
+    "    -file ____________________________________________________ \\\n",
+    "    -reducer _____________________ \\"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Debug "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OPTIMIZATION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
